kubernetes/apps/lakekeeper/lakekeeper/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lakekeeper
spec:
  hostnames: ["lakekeeper.goyangi.cloud"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: lakekeeper
          namespace: lakekeeper
          port: 8181
